--- a/WebContent/template/Css/style.css
+++ b/WebContent/template/Css/style.css
@@ -62,9 +62,10 @@ margin:0px;
   
   .fondo-home h1  {
 	padding-top:40px;
+	padding-bottom:40px;
 	color: black;
 	margin:0px;	
 	text-align:center;
-	font-size:60px;
+	font-size:px;
 	
   }
