--- a/WebContent/template/Css/style.css
+++ b/WebContent/template/Css/style.css
@@ -28,7 +28,7 @@ text-align:center;
 	margin-right:auto;
 	margin-left: auto;
 	font-weight:bold;
-	background: linear-gradient(to top,rgba(30, 231, 193 ,1),rgba(82, 196, 223,1));  
+	background: linear-gradient(to top,rgba(30, 231, 193 ,0.8),rgba(82, 196, 223,0.6)),url(Imagenes/fondohome.jpg);  
 	border-radius: 54px 54px 54px 54px;
 -moz-border-radius: 54px 54px 54px 54px;
 -webkit-border-radius: 54px 54px 54px 54px;
@@ -38,7 +38,7 @@ border: 3px solid #080C0B;
 
 .fondo-login{
 	
-	background: linear-gradient(to top,rgba(174, 171, 170,0.5),rgba(174, 171, 170,0.5)),url(Imagenes/fondologin1.jpg);  
+	background: linear-gradient(to top,rgba(221, 154, 237,0.7),rgba(82, 196, 223,0.7)),url(Imagenes/fondologin1.jpg);  
 	
 }
 
@@ -53,7 +53,7 @@ margin:0px;
 
 
 .fondo-home  {
-  background: linear-gradient(to top,rgba(221, 154, 237,0.9),rgba(82, 196, 223,0.7)),url(Imagenes/fondohome.jpg);  
+  background: linear-gradient(to top,rgba(221, 154, 237,0.6),rgba(82, 196, 223,0.7)),url(Imagenes/fondohome.jpg);  
   height: 100vh;
   background-size: cover;
   
@@ -69,3 +69,18 @@ margin:0px;
 	font-size:px;
 	
   }
+  
+  
+  .fondo-registro-accidente  {
+  background: linear-gradient(to top,rgba(221, 154, 237,0.9),rgba(82, 196, 223,0.7)),url(Imagenes/fondohome.jpg);  
+  height: 100vh;
+  background-size: cover;
+  
+  }
+  
+  
+    .fondo-registro {
+  background: linear-gradient(to top,rgba(221, 154, 237,0.9),rgba(82, 196, 223,0.7)),url(Imagenes/fondohome.jpg);  
+  height: 100vh;
+  background-size: cover;
+    }
